...
        children: [
          Expanded(
            child: Column(
              crossAxisAlignment: CrossAxisAlignment.start,
              children: [
                Text(
                  'Gallery',
                  style: AppStyles.bold24(color: AppColors.darkPurple),
                ),
                Gap(4.h),
                Text(
                  '9 adorable cats',
                  style: AppStyles.regular14(color: AppColors.darkGrey),
                ),
              ],
            ),
          ),
          GestureDetector(
...
