...
        const Row(
          children: [
            Expanded(
              child: CatGridCard(
                imageUrl:
                    'https://images.unsplash.com/photo-1595433707802-6b2626ef1c91',
                breedName: 'Persian',
              ),
            ),
            Gap(16),
            Expanded(
              child: CatGridCard(
                imageUrl:
...
